objects/Document_Staging_Item__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocPaser_Link__c</fullName>
        <label>DocPaser Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Document_Staging__c</fullName>
        <label>Document Staging</label>
        <referenceTo>Document_Staging__c</referenceTo>
        <relationshipLabel>Document Staging Items</relationshipLabel>
        <relationshipName>Document_Staging_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Document_Type_Code__c</fullName>
        <label>Document Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Count__c</fullName>
        <label>Page Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Parsed</fullName>
                </value>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Staging Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Staging Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>